--- a/content/themes/ghostium/partials/custom/config.hbs
+++ b/content/themes/ghostium/partials/custom/config.hbs
@@ -1,8 +1,8 @@
 {{! Your Google Analitycs ID }}
-var ga_ua = 'UA-XXXXX-X';
+var ga_ua = 'UA-16079812-2';
 
 {{! Your Disqus shortname }}
-var disqus_shortname = 'example';
+var disqus_shortname = 'jmatthiesenblog';
 
 {{! Enable Pjax for asynchronous (AJAX) content loading }}
 var enable_pjax = true;
