--- a/content/themes/ghostium/partials/custom/meta.hbs
+++ b/content/themes/ghostium/partials/custom/meta.hbs
@@ -1,23 +1,23 @@
 {{! The Twitter username of the owner of this card's domain }}
-<meta name="twitter:site" content="@yourblogtwitter">
+<meta name="twitter:site" content="@jmatthiesen">
 
 {{! The Twitter username of the author of this content }}
-<meta name="twitter:creator" content="@yourtwitter">
+<meta name="twitter:creator" content="@jmatthiesen">
 
 {{! The Facebook profile URL of the author of this content }}
-<meta property="article:author" content="https://www.facebook.com/yourprofile">
+{{!<meta property="article:author" content="https://www.facebook.com/yourprofile">}}
 
 {{! The Facebook profile URL of the publisher of this content }}
-<meta property="article:publisher" content="https://www.facebook.com/yourblogprofile">
+{{!<meta property="article:publisher" content="https://www.facebook.com/yourblogprofile">}}
 
 {{! Change for Facebook Insight verification }}
-<meta property="fb:admins" content="">
+{{!<meta property="fb:admins" content="">}}
 
 {{! Change for Google Webmaster verification }}
-<meta name="google-site-verification" content="">
+<meta name="google-site-verification" content="H2EwS_SRGKOeDQJNE_Z11MX8aIoUas21YzJ6OCBWbDA">
 
 {{! The Google Plus profile URL of the author of this content }}
-<link rel="author" href="https://plus.google.com/yourprofile">
+<link rel="author" href="https://plus.google.com/+JordanMatthiesen">
 
 {{! Android Lolipop Theme Color }}
 <meta name="theme-color" content="">
