--- a/content/themes/ghostium/partials/footer.hbs
+++ b/content/themes/ghostium/partials/footer.hbs
@@ -1,5 +1,6 @@
 <footer role="contentinfo" class="footer">
-  <p><small>© {{date format="YYYY"}}. All Rights Reserved.</small></p>
-  <p><small><a href="http://ghostium.oswaldoacauan.com/" target="_blank">Ghostium Theme</a> by <a href="http://twitter.com/oswaldoacauan" target="_blank">@oswaldoacauan</a></small></p>
+  <p>Disclaimer: The opinions expressed herein are my own personal opinions and do not necessarily represent my employer’s view in any way</p>
+  <p><small>© {{date format="YYYY"}}, <a href="http://twitter.com/jmatthiesen">Jordan Matthiesen</a>.</small></p>
+  <p><small>Design based on the <a href="http://ghostium.oswaldoacauan.com/" target="_blank">Ghostium Theme</a> by <a href="http://twitter.com/oswaldoacauan" target="_blank">@oswaldoacauan</a></small></p>
   <p><small>Proudly published with <a href="http://ghost.org" target="_blank">Ghost</a></small></p>
 </footer>
